change class theme at dark

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | Calculator app</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="page light">
+<body class="page dark">
   <div class="container">
     <header class="header">
       <h1 class="header__title">calc</h1>
@@ -16,34 +16,34 @@
         <span>THEME</span>
         <div class="theme__button-container">
           <p class="theme__numbers"><span>1</span><span>2</span><span>3</span></p>
-          <div class="theme__button-change btn-light" id="btnTheme">
-            <div class="theme__circle circle-light"></div>
+          <div class="theme__button-change btn-dark" id="btnTheme">
+            <div class="theme__circle circle-dark"></div>
           </div>
         </div>
       </div>
     </header>
 
     <main class="calculator">
-      <p class="calculator__result result-light">399,981</p>
-      <div class="calculator__keys keys-light">
-        <p class="calculator__key key-light">7</p>
-        <p class="calculator__key key-light">8</p>
-        <p class="calculator__key key-light">9</p>
-        <p class="calculator__key color1-light" id="keyDel">DEL</p>
-        <p class="calculator__key key-light">4</p>
-        <p class="calculator__key key-light">5</p>
-        <p class="calculator__key key-light">6</p>
-        <p class="calculator__key key-light">+</p>
-        <p class="calculator__key key-light">1</p>
-        <p class="calculator__key key-light">2</p>
-        <p class="calculator__key key-light">3</p>
-        <p class="calculator__key key-light">-</p>
-        <p class="calculator__key key-light">.</p>
-        <p class="calculator__key key-light">0</p>
-        <p class="calculator__key key-light">/</p>
-        <p class="calculator__key key-light">x</p>
-        <p class="calculator__key color1-light" id="keyReset">REST</p>
-        <p class="calculator__key color2-light" id="keyEqual">=</p>
+      <p class="calculator__result result-dark">399,981</p>
+      <div class="calculator__keys keys-dark">
+        <p class="calculator__key key-dark">7</p>
+        <p class="calculator__key key-dark">8</p>
+        <p class="calculator__key key-dark">9</p>
+        <p class="calculator__key color1-dark" id="keyDel">DEL</p>
+        <p class="calculator__key key-dark">4</p>
+        <p class="calculator__key key-dark">5</p>
+        <p class="calculator__key key-dark">6</p>
+        <p class="calculator__key key-dark">+</p>
+        <p class="calculator__key key-dark">1</p>
+        <p class="calculator__key key-dark">2</p>
+        <p class="calculator__key key-dark">3</p>
+        <p class="calculator__key key-dark">-</p>
+        <p class="calculator__key key-dark">.</p>
+        <p class="calculator__key key-dark">0</p>
+        <p class="calculator__key key-dark">/</p>
+        <p class="calculator__key key-dark">x</p>
+        <p class="calculator__key color1-dark" id="keyReset">REST</p>
+        <p class="calculator__key color2-dark" id="keyEqual">=</p>
       </div>
     </main>
     <!-- <footer class="attribution">
