--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main class="calculator">
-      <p class="calculator__result result-dark">399,981</p>
+      <p class="calculator__result result-dark">00</p>
       <div class="calculator__keys keys-dark">
         <p class="calculator__key key-dark">7</p>
         <p class="calculator__key key-dark">8</p>
@@ -42,7 +42,7 @@
         <p class="calculator__key key-dark">0</p>
         <p class="calculator__key key-dark">/</p>
         <p class="calculator__key key-dark">x</p>
-        <p class="calculator__key color1-dark" id="keyReset">REST</p>
+        <p class="calculator__key color1-dark" id="keyReset">RESET</p>
         <p class="calculator__key color2-dark" id="keyEqual">=</p>
       </div>
     </main>
